working on win modal and border radius bug on mobile

--- a/src/components/StillCard/StillCard.css
+++ b/src/components/StillCard/StillCard.css
@@ -32,7 +32,7 @@ button {
 .card {
   overflow: hidden;
   max-height: 200px;
-  border-radius: 10px;
+  border-radius: 10px !important;
   position: relative;
   width: 200px;
   /* box-shadow: 0 3px 6px #999, 0 3px 6px #999; */
